src/ui/instant/InstantStory.css
#instants .instant A {
    color: black;
    text-decoration: none;
}

#instants .instant {
    display: block;
    border-bottom: 1px solid var(--gray-ultralight);
}

#instants .instant.unread {
    background-color: var(--highlight-cyan);
}

#instants .instant.last-new {
    border-bottom: 1px solid var(--green);
}

#instants .instant .cursor {
    display: flex;
    align-items: center;
    padding: 0.2rem 0.5rem;
    min-height: 5.5em;
}

#instants .instant .cursor:hover {
    background-color: var(--highlight);
}

#instants .instant A {
    display: block;
    flex: auto;
}

#instants .instant A .footer {
    margin-top: 0.3em;
}

#instants .instant A .footer .date {
    color: var(--gray-medium);
    margin-left: 0.5em;
}

#instants .instant .sidebar {
    flex: none;
    padding: 0.5em;
    color: var(--cyan);
    visibility: hidden;
}

#instants .instant:hover .sidebar {
    visibility: visible;
}

#instants .instant:hover .sidebar .envelope {
    cursor: pointer;
}

